--- a/index.html
+++ b/index.html
@@ -32,19 +32,35 @@
             crossorigin="anonymous"/>
     </head>
     <body>
-        <div id="sideBar">
-            <div id="range">
-                <div id="squareNum">16 x 16</div>
-                <input type="range" id="rangeNum" name="" min="1" max="64" value="16" step="1">
-            </div>
-            <button id="clear">Clear</button>
-            <button id="eraser">Eraser</button>
-            <button id="color">Colour mode</button>
-            <input type="color" id="colorPalette" class="invisible" name="colorPalette">
-            <button id="rainbow">Rainbow mode</button>
+        <div class="header">
+            <h1>ETCH-A-SKETCH</h1>
+            <p>Start a sketch on the canvass by selecting your color mode. <br>
+                Use the range to adjust the sketch grid size. <br>
+                Also try to rainbow mode for a color splash! <br>
+                (This app is not optimized for mobile devices.)
+            </p>
         </div>
-        <div id="container"></div>
 
+
+        <div id="main">
+            <div id="sideBar">
+                <div id="range">
+                    <div id="squareNum">16 x 16</div>
+                    <input type="range" id="rangeNum" name="" min="1" max="64" value="16" step="1">
+                </div>
+                <button id="clear">Clear</button>
+                <button id="eraser">Eraser</button>
+                <button id="color">Colour mode</button>
+                <input type="color" id="colorPalette" class="invisible" name="colorPalette">
+                <button id="rainbow">Rainbow mode</button>
+            </div>
+            <div id="container"></div>
+        </div>
+
+
+        <div class="footer">
+            Copyright © 2021 Andre Udotai
+        </div>
 
 
         <script src="main.js"></script>
