updated html and css files

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             crossorigin="anonymous"/>
     </head>
     <body>
+    <div id="app">
+
         <div class="header">
             <h1>ETCH-A-SKETCH</h1>
             <p>Start a sketch on the canvass by selecting your color mode. <br>
@@ -62,6 +64,7 @@
             Copyright © 2021 Andre Udotai
         </div>
 
+    </div>
 
         <script src="main.js"></script>
     </body>
