Improved the UI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="container">
         <div class="header">
             <h1>ETCH-A-SKETCH</h1>
         </div>
@@ -42,15 +42,14 @@
                     <div id="squareNum">16 x 16</div>
                     <input type="range" id="rangeNum" name="" min="1" max="64" value="16" step="1">
                 </div>
-                <button id="color">Colour mode</button>
+                <button id="color">Solid color</button>
                 <input type="color" id="colorPalette" class="invisible" name="colorPalette">
-                <button id="rainbow">Rainbow mode</button>
+                <button id="rainbow">Rainbow</button>
                 <button id="eraser">Eraser</button>
                 <button id="clear">Clear</button>
             </div>
-            <div id="container"></div>
+            <div id="sketchBoard"></div>
         </div>
-
 
         <div class="footer">
             Copyright © <a href="https://github.com/AndreUdotai/landing-page" target="_blank"
